# autoware_v2i_interfaces

./: README.md
v2i_driver_approved_virtual_traffic_light/: CMakeLists.txt  package.xml
v2i_driver_approved_virtual_traffic_light/config/: driver_approved_virtual_traffic_light.param.yaml
v2i_driver_approved_virtual_traffic_light/include/driver_approved_virtual_traffic_light/: driver_approved_virtual_traffic_light_node.hpp
v2i_driver_approved_virtual_traffic_light/launch/: driver_approved_virtual_traffic_light.launch.py
v2i_driver_approved_virtual_traffic_light/src/: driver_approved_virtual_traffic_light_node.cpp  main.cpp
v2i_map_bridge/: CMakeLists.txt  package.xml
v2i_map_bridge/config/: map_udp_bridge.yaml
v2i_map_bridge/launch/: map_udp_bridge.launch.py
v2i_map_bridge/scripts/: map_udp_bridge.py
v2i_map_msgs/: CMakeLists.txt  package.xml
v2i_map_msgs/msg/: MapConnection.msg  MapData.msg  MapIntersection.msg  MapLane.msg  MapLaneAttributes.msg  MapNode.msg  MapPoint.msg
v2i_map_to_rviz_markers/: CMakeLists.txt  package.xml
v2i_map_to_rviz_markers/config/: map_to_rviz_markers.yaml
v2i_map_to_rviz_markers/launch/: intersections_tf.launch.py  map_to_rviz_markers.launch.py  sdsm_intersections_tf.launch.py
v2i_map_to_rviz_markers/scripts/: map_to_rviz_markers.py
v2i_sdsm_bridge/: CMakeLists.txt  package.xml
v2i_sdsm_bridge/config/: sdsm_udp_bridge.yaml
v2i_sdsm_bridge/launch/: sdsm_udp_bridge.launch.py
v2i_sdsm_bridge/scripts/: sdsm_udp_bridge.py
v2i_sdsm_msgs/: CMakeLists.txt  package.xml
v2i_sdsm_msgs/msg/: SDSM.msg  SDSMDetectedObject.msg  SDSMTimestamp.msg
v2i_sdsm_to_autoware_objects/: CMakeLists.txt  package.xml
v2i_sdsm_to_autoware_objects/config/: sdsm_grouped_map_projection.yaml  sdsm_to_autoware_objects.yaml
v2i_sdsm_to_autoware_objects/launch/: sdsm_grouped_map_projection.launch.py  sdsm_to_autoware_objects.launch.py
v2i_sdsm_to_autoware_objects/scripts/: sdsm_grouped_map_projection_node.py  sdsm_to_autoware_objects.py
v2i_spat_bridge/: CMakeLists.txt  package.xml
v2i_spat_bridge/config/: spat_udp_bridge.yaml
v2i_spat_bridge/launch/: spat_udp_bridge.launch.py
v2i_spat_bridge/scripts/: spat_udp_bridge.py
v2i_spat_camera_fusion/: CMakeLists.txt  package.xml
v2i_spat_camera_fusion/config/: traffic_light_hsv_roi_classifier.param.yaml  traffic_light_id_map.yaml
v2i_spat_camera_fusion/launch/: camera_info_frame_republisher.launch.py  traffic_light_hsv_roi_classifier.launch.py  traffic_light_roi_cropper.launch.py  v2i_spat_camera_fusion.launch.py
v2i_spat_camera_fusion/resource/: v2i_spat_camera_fusion
v2i_spat_camera_fusion/scripts/: traffic_light_hsv_param_generator_node.py  traffic_light_hsv_roi_classifier_node.py  traffic_light_roi_cropper_node.py  v2x_spat_fusion_node.py
v2i_spat_camera_fusion/src/: camera_info_frame_republisher.cpp
v2i_spat_msgs/: CMakeLists.txt  package.xml
v2i_spat_msgs/msg/: IntersectionState.msg  MovementEvent.msg  MovementState.msg  Spat.msg  SpatPacket.msg  TimeChangeDetails.msg
v2i_spat_visualizer/: package.xml  setup.cfg  setup.py
v2i_spat_visualizer/config/: intersections.yaml
v2i_spat_visualizer/launch/: v2i_network_spat_visualizer.launch.py  v2i_spat_visualizer.launch.py
v2i_spat_visualizer/resource/: v2i_spat_visualizer
v2i_spat_visualizer/v2i_spat_visualizer/: spat_visualizer.py  v2i_network_spat_visualizer.py
v2i_traffic_light_status_publisher/: CMakeLists.txt  package.xml
v2i_traffic_light_status_publisher/config/: v2i_traffic_light_status_publisher.yaml
v2i_traffic_light_status_publisher/launch/: v2i_traffic_light_status_publisher.launch.py
v2i_traffic_light_status_publisher/scripts/: v2i_traffic_light_status_publisher.py
