<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>v2i_spat_visualizer</name>
  <version>0.1.0</version>
  <description>Qt-based SPaT visualizer for configured V2I traffic signal groups.</description>
  <maintainer email="omercandurmuss@gmail.com">omer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>python_qt_binding</depend>
  <depend>v2i_spat_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
